Fixed resizing of controls. Make sure content is visible first.

--- a/styles/interactive-video.css
+++ b/styles/interactive-video.css
@@ -19,6 +19,7 @@
 .h5p-interactive-video .h5p-video-wrapper {
   position: relative;
   overflow: hidden;
+  min-height: 100px;
 }
 .h5p-interactive-video .h5p-video {
   display: block;
